--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ http {
         listen 8080;
         server_name localhost;
 
-        root /data;
+        root /data/files;
         index index.html;
 
         location / {
