--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,15 @@
-worker_processes 1;
+server {
+    listen 8080;
+    server_name localhost;
 
-events {
-    worker_connections 1024;
-}
+    root /data;
+    index index.html index.htm;
 
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout  65;
-
-    server {
-        listen 8080;
-        server_name localhost;
-
-        root /data/files;
-        index index.html;
-
-        location / {
-            try_files $uri $uri/ =404;
-        }
-
-        error_page 404 /404.html;
+    location / {
+        autoindex on;  # Nur für Debugging, um zu sehen, welche Dateien sichtbar sind
+        try_files $uri $uri/ /index.html;
     }
+
+    error_page 404 /404.html;
 }
+
