--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,17 @@
-server {
+worker_processes 1;
+
+events {
+    worker_connections 1024;
+}
+
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
+
+   server {
     listen 8080;
     server_name localhost;
 
@@ -11,5 +24,5 @@ server {
     }
 
     error_page 404 /404.html;
+    }
 }
-
