--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes 1;
+worker_processes auto;
 
 events {
     worker_connections 1024;
@@ -11,18 +11,32 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-   server {
-    listen 8080;
-    server_name localhost;
-
-    root /data/storage;
-    index index.html index.htm;
-
-    location / {
-        autoindex on;  # Nur für Debugging, um zu sehen, welche Dateien sichtbar sind
-        try_files $uri $uri/ /index.html;
+    server {
+        listen $PORT;
+        server_name localhost;
+        return 301 https://$host$request_uri;
     }
 
-    error_page 404 /404.html;
+    server {
+        listen $PORT ssl;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+
+        root /data/storage;
+        index index.html index.htm;
+
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        error_page 404 /404.html;
+        location = /404.html {
+            internal;
+        }
+
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log warn;
     }
 }
