Update nginx.conf - Jetzt aber. Port noch gefixt

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,13 +12,13 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen $PORT;
+        listen 80;
         server_name localhost;
         return 301 https://$host$request_uri;
     }
 
     server {
-        listen $PORT ssl;
+        listen 443 ssl;
         server_name localhost;
 
         ssl_certificate /etc/nginx/ssl/cert.pem;
