--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
     }
 
     server {
-        listen 443 ssl;
+        listen 443;
         server_name localhost;
 
         ssl_certificate /etc/nginx/ssl/cert.pem;
