--- a/nginx.conf
+++ b/nginx.conf
@@ -18,11 +18,8 @@ http {
     }
 
     server {
-        listen 443;
+        listen 443 ssl;
         server_name localhost;
-
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
 
         root /data/storage;
         index index.html index.htm;
